<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nv1">

    <fragment
        android:id="@+id/nv1"
        android:name="com.zamio.adong.ui.trip.TripFragment"
        android:label="@string/nv1"
        tools:layout="@layout/activity_overview_project" />

    <fragment
        android:id="@+id/nv2"
        android:name="com.zamio.adong.ui.NotificationFragment"
        android:label="@string/nv2"
        tools:layout="@layout/fragment_main_notification" />

    <fragment
        android:id="@+id/nv3"
        android:name="com.zamio.adong.ui.profile.ProfileFragment"
        android:label="@string/nv3"
        tools:layout="@layout/fragment_profile" />


</navigation>
