<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/notification"
        android:name="com.zamio.adong.ui.NotificationFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/setting"
        android:name="com.zamio.adong.ui.profile.ProfileFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/home"
        android:name="com.zamio.adong.ui.PermissionsFragment"
        android:label="@string/title_permissions"
        tools:layout="@layout/fragment_notifications" />
</navigation>
